--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,40 @@ Script/TypeScript/**/*.d.ts
 Script/Haxe/*
 **/.vscode
 .idea
+
+###
+### C++
+###
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
